# sokoban

./: .gitignore  README.md  codeworld-template.cabal  sokoban.cabal
app/: List.hs  Main.hs
