cabal-version:      2.4
name:               sokoban
version:            0.1.0.0

executable codeworld-template
    main-is:          Main.hs
    build-depends:    base
                    , codeworld-api ^>=0.7.0
                    , text
    hs-source-dirs:   app
    ghc-options:      -threaded
    default-language: Haskell2010
